现在类型通过挖掘等级进行计算